manifests/apps/vintagestory/install/ingress.yaml
- apiVersion: traefik.io/v1alpha1
  kind: IngressRouteTCP
  metadata:
    name: 'vintage-story-route'
  spec:
    entryPoints:
      - vintagestory
    routes:
      - match: HostSNI(`*`)
        services:
          - name: 'vintage-story-match-all'
            port: 42420
